# fastapidotoapp

./: .env  .gitignore  Dockerfile.dev  README.md  compose.yaml  pyproject.toml
todos/: main.py
todos/config/: db.py
todos/controllers/: auth_controller.py  todo_controller.py
todos/example_responses/: auth_example.py  todo_example.py
todos/models/: auth_model.py  todo.py  todo_model.py
todos/routes/: auth_routes.py  todo_routes.py
todos/share/: utility.py
todos/types/: auth.py  todo.py
